[package]
name = "elf"
version = "0.0.10-nostd"
authors = ["Christopher Cole <chris.cole.09@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/cole14/rust-elf/"
repository = "https://github.com/cole14/rust-elf/"
documentation = "http://cole14.github.io/rust-elf/"
description = "A pure-rust library for parsing ELF files"
keywords = ["elf", "nostd"]
readme = "README.md"

[lib]
name = "elf"

[features]
default = []
std = ["clap", "byteorder"]

[dependencies]
acid_io = { git = "https://github.com/K-atc/acid_io.git", version = "0.1.0", default-features = false, features = ["byteorder"] }
cstr_core = "0.2.2"

clap = { version = "3.0.14", optional = true }
byteorder = { version = "1.4.3", optional = true }

